data/all_generated_tests/raw_wast_tests/br_if_ImproperFunctionCallorReturnHandling_1795.wast
;; 6. **Test Description**:    - **Test Name**: Loop with Function Return and Conditional Branch    - **Description**: Implement a loop that calls a function and uses a return value in a `br_if` to conditionally continue or exit the loop.    - **Constraint Check**: Validates correct loop continuation or termination based on function return values.    - **Improper Handling**: Tests correctness of loop control flow handling with conditional branching.

(assert_invalid
 (module (func $loop-with-func-return (result i32)
   (block $exit (loop $loop
     (call $return_value) 
     (br_if $exit (get_local 0))
     (br $loop)))
   (func $return_value (result i32)
     (i32.const 0))))
 "type mismatch"
)